Enh #4 added bower-asset/fancytree in dependencies of composer.json

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
 	],
 	"require": {
 		"yiisoft/yii2": "*",
-		"yiisoft/yii2-jui": "*"
+		"yiisoft/yii2-jui": "*",
+		"bower-asset/fancytree": "*"
 	},
 	"autoload": {
 		"psr-4": { "wbraganca\\fancytree\\": "" }
