--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
             "email": "wanderson.wbc@gmail.com"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "require": {
         "yiisoft/yii2": "*",
         "yiisoft/yii2-jui": "*"
